--- a/Jupyter/for loops.ipynb
+++ b/Jupyter/for loops.ipynb
@@ -522,6 +522,366 @@
     "    print(i,)\n",
     "print(\"Times up!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0c7cd22a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'vinod', 'age': '23', 'occupation': 'b.tech', 'location': 'india', 'education': 'b.tech'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d={}\n",
+    "i= 0\n",
+    "while i <10:\n",
+    "    if i%2==0:\n",
+    "        a=input()\n",
+    "    else:\n",
+    "        b=input()\n",
+    "        d.update({a:b})\n",
+    "    i+=1\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b09d40ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "350cc bike is started\n",
+      "Yellow bike is moving in left\n",
+      "Yellow bike is moving in right\n",
+      "Yellow bike is in reserved mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "class Bike:\n",
+    "\n",
+    "    def __init__(self, color, brand):\n",
+    "\n",
+    "        self.color = color\n",
+    "\n",
+    "        self.brand = brand\n",
+    "\n",
+    "        self.mileage = 23.8\n",
+    "\n",
+    "        self.max_speed = 150\n",
+    "\n",
+    "        self.engine_cc = 350\n",
+    "\n",
+    "        self.model = 2019\n",
+    "\n",
+    "    def move(self, direction):\n",
+    "\n",
+    "        print(f\"{self.color} bike is moving in {direction}\")\n",
+    "\n",
+    "    def start(self):\n",
+    "\n",
+    "        print(f\"{self.engine_cc}cc bike is started\")\n",
+    "\n",
+    "    def go_reserved(self):\n",
+    "\n",
+    "        print(f\"{self.color} bike is in reserved mode\")\n",
+    "\n",
+    "bike = Bike(\"Yellow\", \"TVS\")\n",
+    " \n",
+    "bike.start()\n",
+    "\n",
+    "bike.move(\"left\")\n",
+    "\n",
+    "bike.move(\"right\")\n",
+    "\n",
+    "bike.go_reserved()\n",
+    " \n",
+    " \n",
+    "        \n",
+    "\n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    "# class Car:\n",
+    "\n",
+    "#     def __init__(self, color, model):\n",
+    "\n",
+    "#         self.color = color\n",
+    "\n",
+    "#         self.model = model\n",
+    "\n",
+    "#     def move(self):\n",
+    "\n",
+    "#         print(f\" {self.color} Car is moving..\")\n",
+    "\n",
+    "#     def stop(self):\n",
+    "\n",
+    "#         print(f\" {self.color} Car stopped\")\n",
+    "\n",
+    "# car = Car(\"White\", \"SUV\")\n",
+    " \n",
+    "# print(car.move())\n",
+    " \n",
+    " \n",
+    "        \n",
+    " \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c79cda13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "window 11 is the version of laptop\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "class Laptop:\n",
+    "\n",
+    "    def __init__(self, color, brand):\n",
+    "\n",
+    "        self.color = color\n",
+    "\n",
+    "        self.brand = brand\n",
+    "\n",
+    "        self.battery = 1 \n",
+    "\n",
+    "        self.weight = 1.45\n",
+    "\n",
+    "        self.capacity_GB = 12 \n",
+    "\n",
+    "        self.model = 2025\n",
+    "        \n",
+    "        self.version = \"window 11\"\n",
+    "\n",
+    "    def move(self):\n",
+    "\n",
+    "        print(f\"{self.color} laptop is working in good condition\")\n",
+    "\n",
+    "    def start(self):\n",
+    "\n",
+    "        print(f\"{self.version} is the version of laptop\")\n",
+    "\n",
+    "    def go_reserved(self):\n",
+    "\n",
+    "        print(f\"{self.color} taptop is in reserved mode\")\n",
+    "\n",
+    "laptop = Laptop(\"grey\", \"HP\")\n",
+    " \n",
+    "laptop.start()\n",
+    "\n",
+    " \n",
+    "        \n",
+    "\n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    " \n",
+    "# class Car:\n",
+    "\n",
+    "#     def __init__(self, color, model):\n",
+    "\n",
+    "#         self.color = color\n",
+    "\n",
+    "#         self.model = model\n",
+    "\n",
+    "#     def move(self):\n",
+    "\n",
+    "#         print(f\" {self.color} Car is moving..\")\n",
+    "\n",
+    "#     def stop(self):\n",
+    "\n",
+    "#         print(f\" {self.color} Car stopped\")\n",
+    "\n",
+    "# car = Car(\"White\", \"SUV\")\n",
+    " \n",
+    "# print(car.move())\n",
+    " \n",
+    " \n",
+    "        \n",
+    " \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5dd07c74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Jimmy Bow Bowww\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self, bio):\n",
+    "        self.name = bio.get(\"name\")\n",
+    "        self.breed = bio.get(\"breed\")\n",
+    "        self.age = bio.get(\"age\")\n",
+    "        self.weight = bio.get(\"weight\")\n",
+    "    def bark(self):\n",
+    "        print(f\" {bio.get(\"name\")} Bow Bowww\")\n",
+    "     \n",
+    "    def hunt(self):\n",
+    "        print(\"AHH AHHH AHHH\")\n",
+    " \n",
+    "    def eat(self):\n",
+    "        print(\"yum yum yum\")\n",
+    "bio = {\n",
+    "    \"name\": \"Jimmy\",\n",
+    "    \"breed\": \"husky\",\n",
+    "    \"age\": 3,\n",
+    "    \"weight\": 12\n",
+    "}\n",
+    " \n",
+    "dog = Dog(bio)\n",
+    "Dog.bark(bio)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3a2b4aba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000cc Engine is starting..\n",
+      "Engine has stopped..\n",
+      "220 is rotating..\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "class Engine:\n",
+    "\n",
+    "    def __init__(self, cc, torque, rpm):\n",
+    "\n",
+    "        self.cc = cc\n",
+    "\n",
+    "        self.torque = torque\n",
+    "\n",
+    "        self.rpm = rpm\n",
+    "\n",
+    "    def start(self):\n",
+    "\n",
+    "        print(f\"{self.cc}cc Engine is starting..\")\n",
+    "\n",
+    "    def stop(self):\n",
+    "\n",
+    "        print(\"Engine has stopped..\")\n",
+    "\n",
+    "class Body:\n",
+    "\n",
+    "    def __init__(self, color, airbags):\n",
+    "\n",
+    "        self.color = color\n",
+    "\n",
+    "        self.airbags = airbags\n",
+    " \n",
+    "class Wheel:\n",
+    "\n",
+    "    def __init__(self, diameter):\n",
+    "\n",
+    "        self.diameter = diameter\n",
+    "\n",
+    "    def rotate(self):\n",
+    "\n",
+    "        print(f\"{self.diameter} is rotating..\")\n",
+    "\n",
+    " \n",
+    "class car:\n",
+    "\n",
+    "    def __init__(self, wheel, body, engine):\n",
+    "\n",
+    "        self.wheel = wheel\n",
+    "\n",
+    "        self.body = body\n",
+    "\n",
+    "        self.engine = engine\n",
+    "\n",
+    "wheel = Wheel(\"220\")\n",
+    "\n",
+    "body = Body(\"White\", 4)\n",
+    "\n",
+    "engine = Engine(\"1000\", \"2000\", \"150\")\n",
+    "\n",
+    "car = car(wheel, body, engine )\n",
+    " \n",
+    " \n",
+    "car.engine.start()\n",
+    "\n",
+    "car.engine.stop()\n",
+    "\n",
+    "car.wheel.rotate()\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2932fd1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MET:\n",
+    "    \n",
+    "    def __init__(self, rooms, ac,):\n",
+    "        self.rooms = rooms\n",
+    "        self.ac = ac\n",
+    "        \n",
+    "    def.start(self)\n",
+    "    \n",
+    "        print(f\"{self.rooms} clases are starting\")\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
