--- a/Jupyter/plane.ipynb
+++ b/Jupyter/plane.ipynb
@@ -133,12 +133,12 @@
     "\n",
     "                seats[i][j] = 'X'\n",
     "                \n",
-    "                booking += 1\n",
+    "                booking += 1 \n",
     "              \n",
     "\n",
     "    print_seats()\n",
     "    \n",
-    "    while booking == False:\n",
+    "    while booking == True:\n",
     "          print(\"All slots are full\")\n",
     "\n",
     "    \n",
